ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: microservices-ingress
  namespace: test

  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx

  rules:
  - http:
      paths:

      - path: /nginx
        pathType: Prefix

        backend:
          service:
            name: nginx-service

            port:
              number: 80

      - path: /httpd
        pathType: Prefix

        backend:
          service:
            name: httpd-service

            port:
              number: 80
